fixed alignments issues p-3

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -9,7 +9,7 @@
   align-items: center;
   img {
     width: 100%;
-    height: 150px;
+    height: 200px;
     object-fit: cover;
     object-position: bottom;
   }
