--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -20,5 +20,5 @@
 	align-items: center;
 }
 .home_container {
-	min-width: 100vh;
+	min-height: 100vh;
 }
